<resources>
    <string name="app_name">Git</string>
    <string name="Enter">Enter</string>
    <string name="exit">Exit</string>
    <string name="develop">Develop By The Boys</string>
    <string name="setting_menu">Setting</string>
    <string name="background_color">Background Color</string>
    <string name="y_color">Yellow</string>
    <string name="s_color">Sky</string>
    <string name="g_color">Green</string>
    <string name="p_color">Pink</string>
    <string name="w_color">White</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="Not_Add">We Not Add This Option</string>
    <string name="title">Exit </string>
    <string name="message">Do You Want To Exit </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Vcs_Git_Enter">VCS ও Git এর পরিচিতি </string>
    <string name="Git_State_Repository_Enter">Git State ও Repository পরিচিতি </string>
    <string name="Branch_Enter">git branch ও merge এর পরিচিতি </string>
    <string name="Init_Commit_Enter">git init,add ও commit এর পরিচিতি </string>
    <string name="Clone_Pull_Enter">git clone ও pull এর পরিচিতি</string>
    <string name="Remote_Push_Enter">git remote ও push এর পরিচিতি</string>
    <string name="Config_Enter">git config এর পরিচিতি</string>
    <string name="Ssh_key_Enter">ssh-key এর পরিচিতি</string>
    <string name="what_state">গিট স্টেট কি?</string>
    <string name="whats_repo">গিট রিপজিটরি  কি ?</string>
    <string name="What_vcs">ভার্সন কন্ট্রোল সিস্টেম কি?</string>
    <string name="Git_Init_Use">git init এর ব্যবহার :</string>
    <string name="Git_Add_Use">git add এর ব্যবহার :</string>
    <string name="Git_Commit_Use">git commit এর ব্যবহার :</string>
    <string name="Git_remote_Use">git remote এর ব্যবহার :</string>
    <string name="Git_push_Use">git push এর ব্যবহার :</string>
    <string name="Git_branch_Use">git branch ও git merge ব্যবহার</string>
    <string name="vcs_Git_Description">যে পদ্ধতিতে কোনও প্রজেক্টের ফাইলগুলোর পরিবর্তন ট্র্যাক করে রাখা হয় যাতে করে আমরা পরে দরকারে আগের নির্দিস্ট ভার্সনে যেতে পারি তাকে ভার্সন কন্ট্রোল সিস্টেম বলে। সাধরণত ভার্সন কন্ট্রোল সিস্টেম তিন ধরনের |\n১.Local Version Control System (LVCS).\n২.Centralized Version Control System(CVCS).\n৩.Distributed Version Control System(DVCS).\n\nDVCS এক ধরনের VCS যেখানে একটি সম্পূর্ন পোজেক্টের কপি ডেভেলপাররা নিজের মতো ডেভেলপ করতে পারে  এবং সোস্ কোডে আড করতে পারে | এদের মধ্যে গিট DVCS|বর্তমানে ব্যবহৃত সবচেয়ে জনপ্রিয় ভিসিএস হল গিট, 70% ডেভেলপাররা এটিকে তাদের প্রাথমিক ভিসিএস হিসাবে ব্যবহার করে| গিট প্রায় যেকোনো ফাইলের পরিবর্তন গুলো ট্র্যাক করে রাখতে পারে।
        \n\n\nগিট হলো একটি Open-source ভার্সন কন্ট্রোল সিস্টেম যা দিয়ে আমরা একটি প্রজেক্টের ফাইল গুলোর পরিবর্তন ট্র্যাক করতে পারি। গিট ২০০৫ সালে লিনাক্স কার্নেলের জন্য প্রকাশ করা হয় যার স্রস্টা Linus Torvalds. অন্য কার্নেল ডেভেলপাররা এটার ডেভেলপমেন্ট এ কন্ট্রিবিউট করে। বর্তমানে এটা বিশ্বের সবচেয়ে জনপ্রিয় ভার্সন কন্ট্রোল সিস্টেম।
    </string>
    <string name="Git_state_description">গিটের তিনটি প্রাইমারি স্টেট রয়েছে। নিছে তিনটি স্টেট বর্ননা করা হলো।\n মডিফাইড: ফাইল পরিবর্তন করা হয়েছে, কিন্তু গিট এখন এইগুলো মার্ক করেনি। এই ফাইলগুলো গিটের পরবর্তি স্নাপশটে অন্তর্ভুক্ত হবেনা।\nস্টেজড: ফাইলের পরিবর্তন গুলো গিট ট্র্যাক করে রেখেছে, এবং এদের পরবর্তি গিট স্নাপশটে অন্তর্ভুক্ত করা যাবে।\nকমিটেড : ফাইল গুলো পরবর্তি গিট স্নাপশটের অন্তর্ভুক্ত করা হয়েছে।</string>
    <string name="git_status">গিটের বর্তমান status check করাঃআমরা এখন আমাদের গিটের বর্তমান স্ট্যাটাস দেখতে চাচ্ছি, অর্থাৎ কোন কোন ফাইল ট্র্যাক করা হয় নি বা কোন ফাইল স্টেজিং এ আছে। সেজন্যে আমরা নিচের এই কমান্ডটি ব্যবহার করব:\ngit status</string>
    <string name="Repository_description">সহজ ভাষায় বলতে গেলে গিট রিপজিটরি হলো একটি ফোল্ডার বা ডিরক্টরি যেখানে প্রজেক্ট রাখা হয়। এটা আপনার লোকাল কম্পিউটারও হতে পারে বা কোন অনলাইন হোস্টিংও হতে পারে। এই রিপোজিটরি আপনার সম্পুর্ন কোডবেজ এবং প্রত্যেকটি রিভিশন হিস্টরি সেভ করে রাখবে। গিট রিপোজিটরি রাখার জন্য জনপ্রিয় অনলাইন হস্টিং সার্ভিসগুলো হলো, GitHub, GitLab, এবং Bitbucket |</string>
    <string name="Init_description">git init কমান্ডটি একটি ডিরেক্টরিতে একটি নতুন গিট ডিরেক্টরি তৈরি করতে ব্যবহৃত হয়। আপনি যখন git init দিয়ে একটি ডিরেক্টরি শুরু করেন, তখন গিট তার প্রয়োজনীয় ডেটা স্ট্রাকচার এবং ফাইল সেট আপ করে।</string>
    <string name="Git_Add_description">ধরুন আমরা কোনো ফাইল কে ট্র্যাক করতে চাই অর্থাৎ কোনো ফাইলকে Staging এরিয়াতে নিতে চাই। সেজন্যে আমাদেরকে নিচের কমান্ডটি দিতে হবেঃ\ngit add student1.txt\n
এখন কমিট করলে গিট শুধুমাত্র ওই ফাইলটাকেই version হিস্টোরীতে রাখবে | এখন যদি আমরা চাই যে এই ডিরেক্টরির ভিতরের সব আন-ট্র্যাকড ফাইলকে ট্র্যাক করতে একটা কমান্ড দিয়ে তাহলে git এর কমান্ডটি হবে নিচের মতো :
git add --all / git add .</string>
    <string name="Git_Commit_description">commit মানে হচ্ছে final. অর্থাৎ আপনি ফাইনাল সিদ্ধান্ত নিবেন আপনার ট্র্যাক করা চেঞ্জেসগুলোকে গিট রিপোতে রাখবেন কিনা? যদি গিট রিপোতে রাখবেন মনে ,করেন, তাহলে আপনাকে কমিট করতে হবে। আর কমিট করতে চাইলে, প্রত্যেক কমিটের সাথে একটা ম্যাসেজও দিতে হয় যাতে পরবর্তিতে যেকোনো সময় আপনার বুঝতে সুবিধা হয় কোন কমিটটা ঠিক কি কারণে করা হয়েছিলো। সবকিছু এক লাইনে এভাবে হবেঃ\ngit commit -m "First Commit"</string>
    <string name="Git_log_description1">এখন আপনার আগের ভার্শনে ফিরে যাওয়া দরকার | আর এর জন্য আমাদের কে প্রথমে log check করতে হবে। চলুন প্রথমে লগ চেক করে দেখি :\ngit log\nএখন আপনি নিচের মতো লগ গুলো দেখতে পারবেন :</string>
    <string name="Git_log_description2">উপরের ছবিটিতে লক্ষ্য করে থাকবেন এখানে একটি কমিট আছে। সাথে ডিটেইলস সহ, কমিটের ম্যাসেজ দেখে খুব সহজেই আপনি বুঝতে পারবেন কোন কমিটে কি করা হয়েছিলো। আর সাথে কিছু এনক্রিপ্টেড ইউনিক কমিট আই ডি আছে। আপনি চাইলে এগুলো ইউজ করে আবার পূর্বের ভার্শনগুলোয় ফিরে যেতে পারবেন।\nতবে এখানে একটু কমপ্লেক্সিটি আছে, আর তা হচ্ছে প্রতিটি কমিট এর Unique Id টি অনেক বেশি লেংথ এর। এখন যদি এই ID গুলোকে আরো সহজ এবং ছোট করে দেখতে চাই তাহলে নিচের কমান্ডটি লিখতে হবে।\ngit log --oneline</string>
    <string name="Git_log_description3">এখানে সুন্দর করে ছোটো করে প্রয়োজনীয় সব দেখাচ্ছে। এখন এইখানের শর্টকাট ইউনিক কমিট আইডিগুলোও শর্ট করে দেওয়া হয়েছে। এখন আমরা এই শর্ট ভার্শনগুলো ব্যবহার করে আগের কাঙ্ক্ষিত ভার্শনে ফিরে যেতে পারব।ফিরে যাওয়ার জন্য এখন আপনার কমান্ডটি হবে এই রকম :\ngit checkout </string>
    <string name="Checkout_description">git checkout কমান্ড গিট ব্রাঞ্চ গলোর মধ্যে সুইচ করা এবং ফাইল restore করার জন্য ব্যাবহার করা হয়। সহজ কথায় বলতে গেলে এটাকে প্রজেক্টের বিভিন্ন ভার্সনের মধ্যে সুইচ করার একটি রাস্তা হিসেবে বিবেচনা করা যেতে পারে। এই কমান্ড তিনটি উপদানের উপর অপারেশন করতে পারে। যথা, ফাইল, কমিট, ব্রাঞ্চ |</string>
    <string name="Branch_description_1">ধরা যাক আমরা আমাদের প্রজেক্টে কোন নতুন ফিচার যুক্ত করতে চাই। এর জন্য আমাদের মূল প্রজেক্টে সরাসরি কোড আপডেট না করে একটা নতুন ওয়ার্কিং ডিরেক্টরি করা হয়। একেই আমরা ব্রাঞ্চ বলি। এখানে আমরা প্রজেক্টে নতুন ফিচার যুক্ত করে টেস্টিং করি এবং সব কিছু ঠিক থাকলে মূল প্রজেক্টে মার্জ করে নিই। গিট ব্রাঞ্চ গুলো স্বাধীনভাবে প্রজেক্টে কাজ করার সুবিধা দেয়। আমরা যদি কোন প্রজেক্টে ব্রাঞ্চ তৈরি করি তবে আমরা নতুন যেসব কাজ করবো তার হিস্টরি/ রেকর্ড এই ব্রাঞ্চেরই অন্তর্ভুক্ত হবে। আমরা git branchকমান্ড ব্যবহার করে নতুন ব্রাঞ্চ তৈরি/নামকরন/ডিলিট করতে পারি।আমরা এখন নতুন একটা ব্রাঞ্চ তৈরী করবো ru নাম দিয়ে, এর জন্য আপনাকে নিচের কমান্ডটি লিখতে হবে :\ngit branch ru</string>
    <string name="Git_diff_1">এখন দুটি  ব্রাঞ্চের মধ্যে পার্থক্য দেখতে পারেন |  আপনার আগের ব্রাঞ্চের কী কী কোড পরিবর্তন হয়েছে, কোথায় কোড অ্যাড করা হয়েছে, কোথায় ডিলেট করা হয়েছে, এগুলোও সব দেখতে পারবো নিচের গিটের কমান্ডের সাহায্যেঃ\ngit diff branch1..branch2\n  আপনি চাইলে আপনার এক কমিটের সাথে অন্য যে কোনো কমিটের পার্থক্য দেখতে পারেন \ngit diff compareFromId compareAgainstID \n কমান্ডের সাহায্যে | আপনি চাইলে যেকোন ব্রাঞ্চেকে ডিলেট  করতে পারেন  নিচের গিটের কমান্ডের সাহায্যেঃ\ngit branch -d branch_name</string>
    <string name="Git_branch_name_change">আপনি চাইলে যেকোন ব্রাঞ্চের নাম পরিবতর্ন  করতে পারেন সেজন ওই ব্রাঞ্চে  যেতে হবে এবং আপনাকে নিচের গিটের কমান্ডের সাহায্যেঃ\ngit branch -m new branch name</string>
    <string name="Branch_description_2">ব্রাঞ্চতো তৈরী হয়েগেলো, এখন আমরা আমাদের তৈরি ব্রাঞ্চ এর checkout করব। ব্রাঞ্চ চেকআউট করার জন্য আপনাকে নিচের কমান্ডটি ব্যবহার করতে হবে :\ngit checkout newBranch\nতবে আপনি যদি চান নতুন ব্রাঞ্চ তৈরী করে সাথে সাথে সেই ব্রাঞ্চে চেক-আউট হয়ে যাবে, তাহলে আপনাকে নিচের কমান্ডটি লিখতে হবে :\ngit checkout -b newBranch</string>
    <string name="Branch_description_3"> এখন আমরা ru এ করা মডিফিকেশনগুলো master branch এর সাথে merge করব। আর এর জন্য আপনাকে মাস্টার ব্রাঞ্চে থাকা অবস্থায় এই কমান্ড দিলেই অটোম্যাটিক মার্জ হয়ে যাবেঃgit merge ru</string>
    <string name="git_remote_description">গিটহাবের নতুন রিপোজিটরির সাথে আমাদের লোকাল কোন ডিরেক্টরির মধ্যে রিমোট কানেকশন তৈরিতে কমান্ড ব্যবহৃত হয় git remote | সাধারণত গিটহাবের নতুন রিপোজিটরির SSH-URL এর  সাথে  রিমোট কানেকশন তৈরিতে \ngit remote add remote_name SSH-url\nআমাদের লোকাল কোন ডিরেক্টরির মধ্যে কতগুলো রিমোট কানেকশন আছে তা দেখার জন্য git remote -v\nরিমোট কানেকশন ডিলেট করার জন্য\ngit remote rm remote_name</string>
    <string name="Ssh_Description1">SSH (Secure Shell) কী হল ক্রিপ্টোগ্রাফিক কী যা সার্ভার বা অন্য যেকোনো ম্যাশিনের সাথে কানেক্ট করার জন্যে প্রটোকল হিসাবে ইউজ হয়। কিন্তু এটা অনেক কড়াকড়িভাবে সিকিউরড। বিশেষ করে দূরবর্তী লগইন এবং ফাইল স্থানান্তরের প্রসঙ্গে।
SSH সাধারণত বেশী ব্যবহার করা হয়ঃ
গিটহাব বা এরকম কোড শেয়ারিং কোনো সাইটের ক্ষেত্রে
নিজের ওয়েব সার্ভারের সাথে কানেক্ট হওয়ার জন্যে
রিমোট প্লেস থেকে নিজের কোনো সার্ভার, কম্পিউটার বা ম্যাশিনের কন্ট্রোল নেওয়ার জন্যে
একটি SSH কী দুটি অংশ নিয়ে গঠিত: পাবলিক কী এবং প্রাইভেট  কী।আপনি যে সার্ভার সাথে কানেক্ট হবেন তাকে পাবলিক কী দিবেন। সে সেটা নিয়ে স্টোর করে রাখবে।আপনি যখন একটি SSH সার্ভারের সাথে সংযোগ করার চেষ্টা করেন, তখন আপনার ক্লায়েন্ট (যেমন, আপনার কম্পিউটার) সার্ভার দ্বারা প্রেরিত একটি চ্যালেঞ্জ স্বাক্ষর করতে আপনার প্রাইভেট  কী ব্যবহার করবে। সার্ভার আপনার পাবলিক  কী ব্যবহার করে এই স্বাক্ষরটি পরীক্ষা করে, যা এটি ইতিমধ্যেই রয়েছে। যদি স্বাক্ষর মিলে যায়, সার্ভার আপনাকে পাবলিক কী-এর সাথে যুক্ত প্রাইভেট  কী-এর ধারক হিসেবে অথেনটিকেট করে।এখন আমাদের এই কীগুলো জেনারেট করা লাগবে।প্রথমে আপনার গিট ব্যাস এর কমান্ড লাইন ওপেন করুন বা লিনাক্স এর টর্মনালের রুট ইউজার ডিরেক্টরিতে চলে যান। নিচের এই কমান্ড দিয়ে কী জেনারেট করতে পারবেনঃ
\nssh-keygen -t ed25519 -C "your_email@example.com"\nsave এর জন্য এন্টার কী চাপুন |একাধিক ssh-key এর জন্য নাম দিয়ে save করূন| passphrse আপনি কোনোকিছু পূরন না করলেও হবে।এন্টার কী চাপুন|</string>
    <string name="Ssh_Description2">এখন .ssh ফোল্ডারে ২টা ফাইল দেখতে পারবেন | এর মধ্যে .pub আছে যেটাতে সেটা হচ্ছে পাবলিক কী। যেটা সবার সাথে শেয়ার করতে পারবেন। কিন্তু প্রাইভেট কী শেয়ার করা যাবে না |  এখন সবার শেষে আমাদের ম্যাশিনে আপাতত শেষ কাজ হচ্ছে আমরা যে এই SSH কী ইউজ করতে চাচ্ছি সেটা আমাদের সিস্টেমকে বলে দিতে হবে। এটার জন্যে একটা SSH Agent আছে সেটা ইউজ করে বলতে হবে। তাই প্রথমে আমরা এজেন্ট স্টার্ট করবোঃ \neval $(ssh-agent -s)\n
এটা কি করে আপাতত জানার দরকার নাই, কিন্তু আমাদের এজেন্ট স্টার্ট হবে এরকম কিছু একটা দেখিয়েঃ</string>
    <string name="Ssh_Description3">এখন আমরা আমাদের সিস্টেমকে বলবো আমাদের নতুন জেনারেট করা SSH কীওগুলো ইউজ করতেঃ
ssh-add 2nd_key\nতারপর আইডেন্টিটি অ্যাড হয়েছে বলে একটা ম্যাসেজ পাবেনঃ
    </string>
    <string name="Ssh_Description4">ব্যাস! এখন আপনার ম্যাশিনে SSH কী সফলভাবে সেটাপ হয়ে গেছে। এখন আপনার কোড এডিটর দিয়ে আপনার জেনারেট করা কীগুলোর মধ্যে পাবলিক কী টা(.pub দিয়ে যেটা শেষ হইছে) ওপেন করুন। তারপর ভিতরের কন্টেন্টগুলো কপি করুন পুরোটা।এখন আপনি এই SSH যে সার্ভারে ইউজ করবেন সেখানে SSH কী অ্যাড করার অপশন পাবেন। বা আমরা গিটহাবে ইউজ করবো। গিটহাবেও SSH অ্যাড করার অপশন আছে। গিটহাবে লগইন করুন। তারপর ডান পাশে উপরে আপনার প্রোফাইল পিকচারের উপরে ক্লিক করে সেটিংস এ যান|এখানে গেলে এবার বাম দিকে অনেকগুলো অপশনের মধ্যে SSH and GPG keys নামেও একটা অপশন পাবেন|সবশেষে Add SSH Key বাটনে ক্লিক করুন। করলে তারপর আপনার গিটহাবের পাসওয়ার্ড চাইবে, পাসওয়ার্ড দিতে হবে। দিয়ে তারপর সাবমিট করলে এরকম কিছু একটা দেখতে পাবেনঃ</string>
    <string name="Ssh_Description5"> SSH connection Testing নিচের এই কমান্ড দিয়ে \nssh -T git@github.com\n আইডেন্টিটি অ্যাড হয়েছে বলে একটা ম্যাসেজ পাবেনঃ</string>
</resources>