<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_init"
    tools:context=".Init_Commit">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_init" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Git_Init_Use"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:id="@+id/Git_Init_UseId"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_Init_UseId"
                android:text="@string/Init_description"
                android:layout_marginTop="10dp"
                android:id="@+id/Git_Init_Id"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_Init_Id"
                android:text="@string/Git_Add_Use"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:id="@+id/Git_Add_UseId"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_Add_UseId"
                android:layout_marginTop="10dp"
                android:text="@string/Git_Add_description"
                android:id="@+id/Git_Add_ID"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_Add_ID"
                android:src="@drawable/git_add"
                android:id="@+id/Git_Add_Image"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_Add_Image"
                android:src="@drawable/git_add_all"
                android:id="@+id/Git_Add_All_image"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_Add_All_image"
                android:text="@string/Git_Commit_Use"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/Git_Commit_useId"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_Commit_useId"
                android:text="@string/Git_Commit_description"
                android:layout_marginTop="10dp"
                android:id="@+id/Git_commit_id"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_commit_id"
                android:src="@drawable/git_commit"
                android:id="@+id/Git_Commit_image" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_Commit_image"
                android:text="@string/Git_log_description1"
                android:layout_marginTop="10dp"
                android:id="@+id/Git_log_id1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_log_id1"
                android:src="@drawable/git_log1"
                android:id="@+id/Git_log_image1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_log_image1"
                android:text="@string/Git_log_description2"
                android:id="@+id/Git_log_id2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_log_id2"
                android:text="@string/Git_log_description3"
                android:id="@+id/Git_log_id3"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_log_id3"
                android:src="@drawable/git_log2"
                android:id="@+id/Git_log_image2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Git_log_image2"
                android:text="@string/Checkout_description"
                android:id="@+id/Git_log_id4"/>

        </RelativeLayout>

    </ScrollView>
    </com.google.android.material.appbar.AppBarLayout>
