<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_gitall"
    tools:context=".Git_All">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/git_all_toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customise_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/Vcs_Git_Enter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="Clicked"
            android:id="@+id/Vcs_Git_Btn"
            />
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/Vcs_Git_Btn"
            android:background="@drawable/customise_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/Git_State_Repository_Enter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="Clicked"
            android:id="@+id/State_Repo_Btn" />
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customise_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/State_Repo_Btn"
            android:layout_marginTop="10dp"
            android:text="@string/Init_Commit_Enter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="Clicked"
            android:id="@+id/Init_Commit_Btn" />
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customise_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Init_Commit_Btn"
            android:layout_marginTop="10dp"
            android:text="@string/Branch_Enter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="Clicked"
            android:id="@+id/Branch_Merge_Btn"
            />
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customise_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Branch_Merge_Btn"
            android:layout_marginTop="10dp"
            android:text="@string/Remote_Push_Enter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="Clicked"
            android:id="@+id/Remote_Push_Btn"
            />
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customise_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Remote_Push_Btn"
            android:layout_marginTop="10dp"
            android:text="@string/Config_Enter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="Clicked"
            android:id="@+id/Config_btn"
            />
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/customise_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Config_btn"
            android:layout_marginTop="10dp"
            android:text="@string/Ssh_key_Enter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="Clicked"
            android:id="@+id/Ssh_btn"
            />

    </RelativeLayout>


</com.google.android.material.appbar.AppBarLayout>