<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/git"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/git_image"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/git_image"

        android:background="@drawable/customise_btn"
        android:text="@string/Enter"
        android:textColor="@color/yellow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/Git_Enter"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Git_Enter"
       android:background="@drawable/customise_btn"
        android:text="@string/exit"
        android:textColor="@color/yellow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/Git_Exit"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:text="@string/develop"/>

</RelativeLayout>