<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_ssh"
    tools:context=".Ssh">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_ssh"
        />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Ssh_Description1"
                android:id="@+id/ssh_description_1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_description_1"
                android:src="@drawable/ssh_image_1"
                android:id="@+id/ssh_image_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_image_1"
                android:text="@string/Ssh_Description2"
                android:id="@+id/ssh_description_2"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_description_2"
                android:src="@drawable/ssh_image_2"
                android:id="@+id/ssh_image_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_image_2"
                android:text="@string/Ssh_Description3"
                android:id="@+id/ssh_description_3"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_description_3"
                android:src="@drawable/ssh_image_3"
                android:id="@+id/ssh_image_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_image_3"
                android:text="@string/Ssh_Description4"
                android:id="@+id/ssh_description_4"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_description_4"
                android:src="@drawable/ssh_image_4"
                android:id="@+id/ssh_image_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_image_4"
                android:text="@string/Ssh_Description5"
                android:id="@+id/ssh_description_5"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ssh_description_5"
                android:src="@drawable/ssh_image_5"
                android:id="@+id/ssh_image_5"/>
        </RelativeLayout>
    </ScrollView>
</com.google.android.material.appbar.AppBarLayout>
